--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 
-<script src="https://embed.selly.gg"></script> <button data-selly-product="BloomAlts">Pay</button>
+<script src="https://embed.selly.gg"></script> <button data-selly-product="ef627b23">Pay</button>
